[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/HitArea.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Chamber.gd" type="Script" id=2]
[ext_resource path="res://Objects.png" type="Texture" id=3]
[ext_resource path="res://Bar.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "BigBubble"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "SmallBubble"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.0
height = 12.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 10 )

[node name="Chamber" type="StaticBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Broken" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 48, 10, 16, 16 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 3 )
vframes = 2
hframes = 4
frame = 4
region_enabled = true
region_rect = Rect2( 0, 26, 64, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/BigBubble = SubResource( 1 )
anims/SmallBubble = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="HitArea" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, -13 )
shape = SubResource( 4 )

[node name="Bar" parent="." instance=ExtResource( 4 )]
margin_left = 7.0
margin_top = -6.0
margin_right = 23.0
margin_bottom = -5.0
rect_rotation = -90.0

[node name="Spawn1" type="Node2D" parent="."]
position = Vector2( -7, 3 )

[node name="Spawn2" type="Node2D" parent="."]
position = Vector2( 7, 3 )
[connection signal="hit" from="HitArea" to="." method="_on_HitArea_hit"]
